--- a/ourShef/src/main/resources/static/css/loginForm.css
+++ b/ourShef/src/main/resources/static/css/loginForm.css
@@ -27,8 +27,8 @@ form > div{
   transition: 0.3s;
 }
 .form input:focus {
-  border: 1px solid dodgerblue;
-  box-shadow: 0 0 5px dodgerblue;
+  border: 1px solid rgb(82, 201, 143);
+  box-shadow: 0 0 5px rgb(110, 226, 120);
 }
 
 .form input:focus::placeholder {
@@ -36,7 +36,7 @@ form > div{
 }
 
 .form input:focus + label {
-  background-color: dodgerblue;
+  background-color: rgb(82, 201, 143);
 }
 
 form label {
