--- a/ourShef/src/main/resources/templates/acquaintance/acquaintanceRequestForm.html
+++ b/ourShef/src/main/resources/templates/acquaintance/acquaintanceRequestForm.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>지인 신청하기</title>
 
-  <!-- bootStrap -->
-  <link rel="stylesheet" href="../../static/bootStrap/bootstrap-theme.css">
-  <link rel="stylesheet" href="../../static/bootStrap/bootstrap.css">
-
+  <!-- common -->
+  <link rel="stylesheet" href="/static/common.css">
   <!-- specific -->
   <link rel="stylesheet" href="../../static/css/acquaintanceRequestForm.css">
 
@@ -19,11 +17,11 @@
     <div>
       <img class="demo-img" style="width: 150px; border-radius: 50%;">
     </div>
-    <div class="guide-text">지인 아아디를 입력해주세요</div>
+    <div class="guide-text">지인 아이디를 입력해주세요</div>
     <div><input type="text"></div>
     <div> 
-      <button class="btn btn-primary">지인신청</button> 
-      <button class="btn btn-primary">취소</button>
+      <button class="btn-shefGreen">지인신청</button> 
+      <button class="btn-shefGreen">취소</button>
     </div>
   </form>
 
