--- a/ourShef/src/main/resources/templates/acquaintance/relationshipRequestBox.html
+++ b/ourShef/src/main/resources/templates/acquaintance/relationshipRequestBox.html
@@ -24,7 +24,7 @@
         <form id="form-i1" action="#none">
             <div class="container">
                 <div class="row text-center text-primary">
-                    <h3>보낸 친분 요청</h3>
+                    <h3 class="text-shefGreen">보낸 친분 요청</h3>
                 </div>
                 <div class="row">
                     <ul>
@@ -74,9 +74,9 @@
                 </div>
                 <div class="row">
                     <div class="btns-footer">
-                        <button class="btn btn-primary" type="button">이전으로</button>
-                        <button class="btn btn-primary">받은 친분 요청</button>
-                        <button class="btn btn-primary btn-delete">삭제하기</button>
+                        <button class="btn-shefGreen" type="button">이전으로</button>
+                        <button class="btn-shefGreen">받은 친분 요청</button>
+                        <button class="btn-shefGreen btn-delete">삭제하기</button>
                     </div>
                 </div>
             </div>
