--- a/ourShef/src/main/resources/templates/login/loginForm.html
+++ b/ourShef/src/main/resources/templates/login/loginForm.html
@@ -6,23 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--부트 스트랩-->
-        <link rel="stylesheet" th:href="@{/bootStrap/bootstrap-theme.css}" href="../../bootStrap/bootstrap-theme.css">
-        <link rel="stylesheet" th:href="@{/bootStrap/bootstrap.css}" href="../../bootStrap/bootstrap.css">
+        <link rel="stylesheet" th:href="@{/bootStrap/bootstrap-theme.css}" href="/static/bootStrap/bootstrap-theme.css">
+        <link rel="stylesheet" th:href="@{/bootStrap/bootstrap.css}" href="/static/bootStrap/bootstrap.css">
 
         <!--font awesome-->
-        <link rel="stylesheet" th:href="@{/library/fontawesome/all.min.css}" href="../../library/fontawesome/all.min.css">
+        <link rel="stylesheet" th:href="@{/library/fontawesome/all.min.css}" href="/static/library/fontawesome/all.min.css">
 
         <!--custom-->
-        <link rel="stylesheet" th:href="@{/common.css}" href="../../style.css">
-        <link rel="stylesheet" th:href="@{/css/loginForm.css}">
+        <link rel="stylesheet" th:href="@{/common.css}" href="/static/common.css">
+        <link rel="stylesheet" th:href="@{/css/loginForm.css}" href="/static/css/loginForm.css">
 
         <title>loginForm</title>
     </head>
     <body class="loginForm">
         <div class="container">
             <div class="row">
-                <h1 class="text-center text-primary">OurShef</h1>
-                <h2 class="text-center text-muted">로그인 하기</h2>
+                <h1 class="text-center text-shefGreen">OurShef</h1>
+                <h2 class="text-center text-success">로그인 하기</h2>
             </div>
             <div class="row">
                 <div class="form text-center">
@@ -46,10 +46,10 @@
                             </label>
                         </div>
                         <div>
-                          <button class="btn btn-primary" type="submit">로그인</button>
+                          <button class="btn-shefGreen" type="submit">로그인</button>
                         </div>
                         <div>
-                          <button class="btn btn-primary" type="button" onclick="location.href='/'">홈으로</button>
+                          <button class="btn-shefGreen" type="button" onclick="location.href='/'">홈으로</button>
                         </div>
                     </form>
                 </div>
@@ -57,10 +57,10 @@
             <div class="row"></div>
         </div>
         <!-- jQuery -->
-        <script src="/library/jquery-2.1.4.js"></script>
+        <script src="/static/library/jquery-2.1.4.js"></script>
         <!--부트 스트랩-->
-        <script src="../bootStrap/bootstrap.js"></script>
+        <script src="/static/bootStrap/bootstrap.min.js"></script>
         <!-- fontawesome -->
-        <script th:src="@{/library/fontawesome/all.js}" src="../../library/fontawesome/all.js"></script>
+        <script th:src="@{/library/fontawesome/all.js}" src="/static/library/fontawesome/all.js"></script>
     </body>
 </html>
