--- a/ourShef/src/main/resources/templates/spot/spot.html
+++ b/ourShef/src/main/resources/templates/spot/spot.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-		<!--fontawesome-->
-        <link rel="stylesheet" th:href="@{/library/fontawesome/all.min.css}" href="../../static/library/fontawesome/all.min.css">
-        
+
+        <!--fontawesome-->
+        <link
+            rel="stylesheet"
+            th:href="@{/library/fontawesome/all.min.css}"
+            href="../../static/library/fontawesome/all.min.css">
+
         <!--부트 스트랩-->
         <link
             rel="stylesheet"
@@ -17,17 +20,17 @@
             rel="stylesheet"
             href="../../static/bootStrap/bootstrap.css"
             th:href="@{/bootStrap/bootstrap.css}">
-            
-            <!--css-->
-        <link rel="stylesheet" href="../../static/common.css" th:href="@{/common.css}">
-        <link rel="stylesheet" th:href="@{/css/spot.css}">
+
+        <!--css-->
+        <link rel="stylesheet" href="/static/common.css" th:href="@{/common.css}">
+        <link rel="stylesheet" href="/static/css/spot.css" th:href="@{/css/spot.css}">
 
         <title>Document</title>
     </head>
     <body class="spot">
         <div class="container">
             <div class="row">
-                <h1 class="text-head text-primary" th:text="${spotDetailDto.spotName}">
+                <h1 class="text-head text-shefGreen" th:text="${spotDetailDto.spotName}">
                     맛집 제목
                 </h1>
             </div>
@@ -35,14 +38,26 @@
                 <div class="col-md-4 layout-1"></div>
                 <div class="col-md-4 layout-2">
                     <div>
-                        <img id="main-spot-img" th:src="@{/img/spotMain/{storeName}(storeName = ${spotDetailDto.mainImgStoreName})}" th:class="''" class="demo-img" alt="메인 스폿 이미지">
+                        <img
+                            id="main-spot-img"
+                            th:src="@{/img/spotMain/{storeName}(storeName = ${spotDetailDto.mainImgStoreName})}"
+                            th:class="''"
+                            class="demo-img"
+                            alt="메인 스폿 이미지">
                     </div>
                     <div class="spot-info-warapper">
-                    	<div class="registeration-time-frame" th:text="${#temporals.format(spotDetailDto.registeredTime, 'yyyy-MM-dd')}">등록날짜</div>
-                     	<div class="registrant-star-point-frame">
+                        <div
+                            class="registeration-time-frame"
+                            th:text="${#temporals.format(spotDetailDto.registeredTime, 'yyyy-MM-dd')}">등록날짜</div>
+                        <div class="registrant-star-point-frame">
                             <div>등록자 평점</div>
                             <div class="starPointSystem">
-                                <input class="input-star-point" th:value="${spotDetailDto.registrantStarPoint}" type="text" value="10" required="required">
+                                <input
+                                    class="input-star-point"
+                                    th:value="${spotDetailDto.registrantStarPoint}"
+                                    type="text"
+                                    value="10"
+                                    required="required">
                                 <div class="star-point-area">
                                     <div class="star-front"></div>
                                     <div class="star-back"></div>
@@ -52,7 +67,12 @@
                         <div class="users-star-point-frame">
                             <div>지인들 평점</div>
                             <div class="starPointSystem">
-                                <input class="input-star-point" th:value="${spotDetailDto.usersStarPoint}" type="text" value="10" required="required">
+                                <input
+                                    class="input-star-point"
+                                    th:value="${spotDetailDto.usersStarPoint}"
+                                    type="text"
+                                    value="10"
+                                    required="required">
                                 <div class="star-point-area">
                                     <div class="star-front"></div>
                                     <div class="star-back"></div>
@@ -70,8 +90,12 @@
                     </div>
                 </div>
                 <div class="col-md-4 layout-3 spot-image-area">
-                    <img th:src="@{/img/spotAdded/{storeName}(storeName = ${addedImgStoreName})}" 
-                    th:class="''" class="demo-img" alt="장소 추가 사진" th:each="addedImgStoreName : ${spotDetailDto.addedImgStoreNames}">
+                    <img
+                        th:src="@{/img/spotAdded/{storeName}(storeName = ${addedImgStoreName})}"
+                        th:class="''"
+                        class="demo-img"
+                        alt="장소 추가 사진"
+                        th:each="addedImgStoreName : ${spotDetailDto.addedImgStoreNames}">
                 </div>
             </div>
             <div class="row">
@@ -80,28 +104,36 @@
                         <div class="comment bg-info" th:each="commentDto : ${commentDtoList}">
                             <div class="comment-middle">
                                 <div class="img-frame">
-                                    <img th:src="@{/img/userProfile/{storeName}(storeName=${commentDto.commentUserProfileImgStoreName})}"
-                                    th:class="'img-commet-profile img-rounded'" class="img-rounded demo-img"></img>
+                                    <img
+                                        th:src="@{/img/userProfile/{storeName}(storeName=${commentDto.commentUserProfileImgStoreName})}"
+                                        th:class="'img-commet-profile img-rounded'"
+                                        class="img-commet-profile img-rounded demo-img"></img>
                                 </div>
                                 <div class="text-frame">
                                     <details>
-                                        <summary th:text = "${commentDto.commentSummary}">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum
-                                            quasi mollitia.
+                                        <summary th:text="${commentDto.commentSummary}">Lorem ipsum dolor sit amet
+                                            consectetur adipisicing elit. Iure laborum quasi mollitia.
                                         </summary>
-                                        <div th:text = "${commentDto.commentDetail}">Fugit adipisci nostrum recusandae ex placeat deserunt, optio aliquid
+                                        <div th:text="${commentDto.commentDetail}">Fugit adipisci nostrum recusandae ex placeat deserunt, optio aliquid
                                         </div>
-                                        <div th:text = "${#temporals.format(commentDto.registeredTime, 'yyyy-MM-dd hh:mm')}">2000-10-15 11-00</div>
+                                        <div
+                                            th:text="${#temporals.format(commentDto.registeredTime, 'yyyy-MM-dd hh:mm')}">2000-10-15 11-00</div>
                                     </details>
                                 </div>
                             </div>
                             <div class="comment-bottom">
-                                <div class="nickname-frame" th:text= "${commentDto.commentUserNickName}">
+                                <div class="nickname-frame" th:text="${commentDto.commentUserNickName}">
                                     닉네임닉네임닉네임
                                 </div>
                                 <div class="starpoint-frame">
                                     <div>
                                         <div class="starPointSystem">
-                                            <input th:value="${commentDto.starPoint}" class="input-star-point" type="text" value="10" required="required">
+                                            <input
+                                                th:value="${commentDto.starPoint}"
+                                                class="input-star-point"
+                                                type="text"
+                                                value="10"
+                                                required="required">
                                             <div class="star-point-area">
                                                 <div class="star-front"></div>
                                                 <div class="star-back"></div>
@@ -137,14 +169,14 @@
                         </div>
                     </div>
                     <div class="comment-form-wrapper">
-                        <button class="btn-leave-comment btn-primary">댓글 남기기</button>
+                        <button class="btn-leave-comment btn-subGreen">댓글 남기기</button>
                         <details>
                             <summary class="summary"></summary>
                             <form>
                                 <div><input type="text" hidden="hidden"></div>
                                 <div>
                                     <div id="starPointSystem-i1" class="starPointSystem">
-                                        <input     
+                                        <input
                                             th:name="starPoint"
                                             class="input-star-point"
                                             type="text"
@@ -178,7 +210,7 @@
                                         maxlength="200"></textarea>
                                 </div>
                                 <div>
-                                    <button class="btn-leave-comment2 btn-success">입력</button>
+                                    <button class="btn-leave-comment2 btn-subGreen">입력</button>
                                 </div>
                             </form>
                         </details>
@@ -187,13 +219,19 @@
                 <div class="layout-visitor-info col-md-6">
                     <div class="visitor-info-wrapper">
                         <div>
-                            <img th:src="@{/img/userProfile/{storeName}(storeName = ${registrantDto.profileImgStoreName})}" 
-                            th:class="visitor-profile-img" class="visitor-profile-img demo-img">
+                            <img
+                                th:src="@{/img/userProfile/{storeName}(storeName = ${registrantDto.profileImgStoreName})}"
+                                th:class="visitor-profile-img"
+                                class="visitor-profile-img demo-img">
                         </div>
                         <div th:text="${registrantDto.nickName}" class="visitor-nickName">탐방한 사람 이름</div>
                         <div>
                             <div class="reliabilitySystem">
-                                <input th:value="${registrantDto.reliability}" class="input-reliability-size" type="hidden" value="-1">
+                                <input
+                                    th:value="${registrantDto.reliability}"
+                                    class="input-reliability-size"
+                                    type="hidden"
+                                    value="-1">
                                 <div class="reliabilityText">신뢰도</div>
                                 <div class="gaugeBar">
                                     <div class="back"></div>
@@ -215,20 +253,25 @@
             </div>
             <div class="row">
                 <div class="col-sm-3 footer">
-                    <button class="btn btn-primary">
+                    <button class="btn-shefGreen">
                         로그인 홈</button>
+                    <button class="btn-shefGreen">
+                        수정하기
+                    </button>
                 </div>
             </div>
         </div>
         <!--jQuery-->
-            <script
-                src="../../static/library/jquery-2.1.4.js"
-                th:src="@{/library/jquery-2.1.4.js}"></script>
-            <!--cummon.js-->
-            <script src="../../static/common.js" th:src="@{/common.js}"></script>
-            <!--custom.js-->
-            <script th:src="@{/js/spot.js}" src="../../static/js/spot.js"></script>
-            <!--fontawesome-->
-            <script th:src="@{/library/fontawesome/all.js}" src="../../static/library/fontawesome/all.js"></script>
+        <script
+            src="../../static/library/jquery-2.1.4.js"
+            th:src="@{/library/jquery-2.1.4.js}"></script>
+        <!--cummon.js-->
+        <script src="../../static/common.js" th:src="@{/common.js}"></script>
+        <!--custom.js-->
+        <script th:src="@{/js/spot.js}" src="../../static/js/spot.js"></script>
+        <!--fontawesome-->
+        <script
+            th:src="@{/library/fontawesome/all.js}"
+            src="../../static/library/fontawesome/all.js"></script>
     </body>
 </html>
