--- a/ourShef/src/main/resources/templates/spot/spotListOfUser.html
+++ b/ourShef/src/main/resources/templates/spot/spotListOfUser.html
@@ -5,26 +5,23 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--jQuery-->
-        <script src="../../static/library/jquery-2.1.4.js"></script>
-
         <!--부트 스트랩-->
-        <link rel="stylesheet" href="../../static/bootStrap/bootstrap-theme.css">
-        <link rel="stylesheet" href="../../static/bootStrap/bootstrap.css">
+        <link rel="stylesheet" th:href="@{/bootStrap/bootstrap-theme.css}" href="../../static/bootStrap/bootstrap-theme.css">
+        <link rel="stylesheet" th:gref="@{/bootStrap/bootstrap.css}" href="../../static/bootStrap/bootstrap.css">
 
         <!-- fonsawesome -->
-        <link rel="stylesheet" href="../../static/library/fontawesome/all.min.css">
+        <link rel="stylesheet" th:href="@{/library/fontawesome/all.min.css}" href="../../static/library/fontawesome/all.min.css">
 
         <!--custom-->
-        <link rel="stylesheet" href="../../static/common.css">
-        <link rel="stylesheet" href="../../static/css/spotListOfUser.css">
+        <link rel="stylesheet" th:href="@{/common.css}" href="../../static/common.css">
+        <link rel="stylesheet" th:href="@{/css/spotListOfUser.css}" href="../../static/css/spotListOfUser.css">
 
         <title>spotListOfUser</title>
     </head>
     <body class="spotListOfUser">
         <div class="container">
             <div class="row text-center text-primary">
-                <h3>XXX의 맛집 리스트 입니다!</h3>
+                <h3 class="text-shefGreen">XXX의 맛집 리스트 입니다!</h3>
             </div>
             <div class="row">
                 <div class="col-sm-1"></div>
@@ -117,7 +114,7 @@
             <div class="row footer">
               <div class="col-xs-4 col-md-1"></div>
               <div class="col-xs-8 col-md-2">
-                  <button class="btn btn-primary" type="button">이전으로</button>
+                  <button class="btn-shefGreen" type="button">이전으로</button>
               </div>
               <div class="col-md-6"></div>
               <div class="col-md-2">
@@ -126,10 +123,12 @@
           </div>
         </div>
         <!--부트 스트랩-->
-        <script src="../../static/bootStrap/bootstrap.min.js"></script>
+        <script th:src="@{/bootStrap/bootstrap.min.js}" src="../../static/bootStrap/bootstrap.min.js"></script>
         <!-- fonsawesome -->
-        <script src="../../static/library/fontawesome/all.js"></script>
+        <script th:src="@{/library/fontawesome/all.js}" src="../../static/library/fontawesome/all.js"></script>
         <!--custom.js-->
-        <script src="../../static/common.js"></script>
+        <script th:src="@{/common.js}" src="../../static/common.js"></script>
+        <!--jQuery-->
+        <script th:src="@{/library/jquery-2.1.4.js}" src="../../static/library/jquery-2.1.4.js"></script>
     </body>
 </html>
