--- a/ourShef/src/main/resources/templates/spot/spotModification.html
+++ b/ourShef/src/main/resources/templates/spot/spotModification.html
@@ -6,29 +6,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--부트 스트랩-->
-        <link rel="stylesheet" th:href="@{/bootStrap/bootstrap-theme.css}" href="../../static/bootStrap/bootstrap-theme.css">
-        <link rel="stylesheet" th:href="@{/bootStrap/bootstrap.css}" href="../../static/bootStrap/bootstrap.css">
+        <link rel="stylesheet" href="../../static/bootStrap/bootstrap-theme.css">
+        <link rel="stylesheet" href="../../static/bootStrap/bootstrap.css">
 
         <!--fontawesome-->
-        <link rel="stylesheet" th:href="@{/library/fontawesome/all.min.css}" href="../../library/fontawesome/all.min.css">
+        <link rel="stylesheet" href="../../library/fontawesome/all.min.css">
 
         <!--css-->
-        <link rel="stylesheet" th:href="@{/css/spotRegisteration.css}" href="../../static/css/spotRegisteration.css">
-        <link rel="stylesheet" th:href="@{/common.css}" href="../../static/common.css">
+        <link rel="stylesheet" href="../../static/css/spotModification.css">
+        <link rel="stylesheet" href="../../static/common.css">
 
         <title>spotRegisteration</title>
     </head>
     <body class="spotRegisteration">
         <form
             action="#none"
-            th:action="@{/spot/registeration}"
+            th:action="th:action"
             method="post"
             enctype="multipart/form-data">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-2"></div>
                     <div class="col-xs-8">
-                        <h3 class="text-shefGreen">맛집 등록 페이지</h3>
+                        <h3 class="text-primary">맛집 수정</h3>
                     </div>
                     <div class="col-xs-2"></div>
                 </div>
@@ -50,7 +50,7 @@
                                     accept=".jpg, .txt"
                                     name="main-img">
                                 <div class="text-danger" th:errors="${spotRegisterationForm.spotMainImg}">메인 사진 오류 메시지</div>
-                                <button id="btn-main-img" class="btn-subGreen" type="button">메인 사진 등록</button>
+                                <button id="btn-main-img" class="btn-subGreen" type="button">메인 사진 변경</button>
                             </div>
                             <div class="img-button-frame">
                                 <input
@@ -61,7 +61,7 @@
                                     multiple="multiple"
                                     name="added-img">
                                 <div class="text-danger" th:errors="${spotRegisterationForm.spotAddedImgs}">추가 사진 오류 메시지</div>
-                                <button id="btn-added-imgs" class="btn-subGreen" type="button">추가 사진 등록</button>
+                                <button id="btn-added-imgs" class="btn-subGreen" type="button">추가 사진 변경</button>
                             </div>
                         </div>
                     </div>
@@ -119,26 +119,28 @@
                 </div>
                 <div class="row footer">
                     <div class="col-md-1"></div>
-                    <div class="col-xs-8 col-md-2">
+                    <div class="col-xs-7 col-md-2">
                         <button class="btn-shefGreen" type="button" onclick="location.href='/'">홈으로</button>
                     </div>
                     <div class="col-md-6"></div>
-                    <div class="col-xs-4 col-md-2">
-                        <button class="btn-shefGreen" type="submit">등록하기</button>
+                    <div class="col-xs-5 col-md-2">
+                        <button class="btn-shefGreen" type="submit">수정하기</button>
+                        <button class="btn-shefGreen btn-delete" type="button" 
+                        onclick="location.href='/'">삭제하기</button>
                     </div>
                     <div class="col-md-1"></div>
                 </div>
             </div>
         </form>
         <!--JQuery-->
-        <script th:src="@{/library/jquery-2.1.4.js}" src="../../library/jquery-2.1.4.js"></script>
+        <script src="../../library/jquery-2.1.4.js"></script>
         <!--fontawesome-->
-        <script th:src="@{/library/fontawesome/all.js}" src="../../library/fontawesome/all.js"></script>
+        <script src="../../library/fontawesome/all.js"></script>
         <!--부트 스트랩-->
-        <script th:src="@{/bootStrap/bootstrap.min.js}" src="../../static/bootStrap/bootstrap.min.js"></script>
+        <script src="../../static/bootStrap/bootstrap.min.js"></script>
         <!--cummon.js-->
-        <script th:src="@{/common.js}" src="../../static/common.js"></script>
+        <script src="../../static/common.js"></script>
         <!--specific-->
-        <script th:src="@{/js/spotRegisteration.js}" src="../../static/js/spotRegisteration.js"></script>
+        <script src="../../static/js/spotModification.js"></script>
     </body>
 </html>
