Form etc Update

--- a/ourShef/src/main/resources/templates/acquaintance/acquaintanceList.html
+++ b/ourShef/src/main/resources/templates/acquaintance/acquaintanceList.html
@@ -18,7 +18,7 @@
         <!--specific-->
         <link rel="stylesheet" th:href="@{/css/acquaintanceList.css}" href="../../static/css/acquaintanceList.css">
 
-        <title>acquaintanceList</title>
+        <title>AcquaintanceList</title>
     </head>
     <body>
         <form id="form-i1" action="#none">
