--- a/ourShef/src/main/resources/templates/acquaintance/relationshipRequestBox.html
+++ b/ourShef/src/main/resources/templates/acquaintance/relationshipRequestBox.html
@@ -18,7 +18,7 @@
         <!--specific-->
         <link rel="stylesheet" href="../../static/css/relationshipRequestBox.css">
 
-        <title>relationshipRequestBox</title>
+        <title>RelationshipRequestBox</title>
     </head>
     <body>
         <form id="form-i1" action="#none">
