--- a/ourShef/src/main/resources/templates/acquaintance/relationshipResponseBox.html
+++ b/ourShef/src/main/resources/templates/acquaintance/relationshipResponseBox.html
@@ -18,7 +18,7 @@
         <!--specific-->
         <link rel="stylesheet" href="../../static/css/relationshipResponseBox.css">
 
-        <title>relationshipResponseBox</title>
+        <title>RelationshipResponseBox</title>
     </head>
     <body>
         <form id="form-i1" action="#none">
