--- a/ourShef/src/main/resources/templates/home.html
+++ b/ourShef/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" th:href="@{/bootStrap/bootstrap.css}" href="/static/bootStrap/bootstrap.css">
         <link rel="stylesheet" th:href="@{/common.css}" href="/static/common.css">
         <link rel="stylesheet" th:href="@{/css/home.css}" href="/static/css/home.css">
-        <title>OurShefHome</title>
+        <title>OurShef</title>
     </head>
     <body class="home">
         <div class=".container-fluid text-center">
