--- a/ourShef/src/main/resources/templates/spot/spotRegisteration.html
+++ b/ourShef/src/main/resources/templates/spot/spotRegisteration.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" th:href="@{/css/spotRegisteration.css}" href="../../static/css/spotRegisteration.css">
         <link rel="stylesheet" th:href="@{/common.css}" href="../../static/common.css">
 
-        <title>spotRegisteration</title>
+        <title>Spot Registeration</title>
     </head>
     <body class="spotRegisteration">
         <form
