--- a/ourShef/src/main/resources/templates/user/loginUserInfo.html
+++ b/ourShef/src/main/resources/templates/user/loginUserInfo.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" th:href="@{/common.css}" href="../../static/common.css">
 <link rel="stylesheet" th:href="@{/css/loginUserInfo.css}" href="../../static/css/loginUserInfo.css">
 
-<title>회원가입</title>
+<title>User Info</title>
 </head>
 <style>
 .error-border {
