--- a/ourShef/src/main/resources/static/css/spotListOfUser.css
+++ b/ourShef/src/main/resources/static/css/spotListOfUser.css
@@ -14,6 +14,16 @@
   display: block;
   margin: auto;
 }
+
+.nick-name{
+	text-align: center;
+	font-size: 17px;
+}
+
+.reliabilitySystem {
+	margin: auto;
+}
+
 /* spots */
 .spot-area {
   margin-top: 50px;
@@ -26,12 +36,24 @@
 .spot-info {
   float: left;
   width: 170px;
+  padding: 10px;
 }
 .spot-info img{
   width: 150px;
+  display: block;
+  margin: auto;
 }
 .spot-info > div{
   margin-top: 5px;
+}
+
+.spot-name {
+	font-size: 17px;
+}
+
+.pager-container-wrapper {
+	margin-top: 20px;
+	text-align: center;
 }
 
 .footer {
