--- a/ourShef/src/main/resources/templates/acquaintance/acquaintanceRequestForm.html
+++ b/ourShef/src/main/resources/templates/acquaintance/acquaintanceRequestForm.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>지인 신청하기</title>
+  <title>Acquaintance Application</title>
 
   <!-- common -->
   <link rel="stylesheet" href="/static/common.css">
